--- a/web_app1/web_app1.csproj
+++ b/web_app1/web_app1.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="prometheus-net.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
