--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -3,4 +3,4 @@ scrape_configs:
     scrape_interval: 5s
     metrics_path: /metrics
     static_configs:
-      - targets: ['web_app1:80']
+      - targets: ['web_app:80']
